# x730-script

./: .gitignore  Makefile  Makefile.py  README.md  install.sh  pyproject.toml  uninstall.sh
src/: x730button.service  x730button.sh  x730poweroff.service  x730reboot.service  x730shutdown.service  x730shutdown.sh
src/systemd/: x730button.service  x730daemon.service  x730poweroff.service  x730reboot.service
src/tests/: test_x730.py
src/x730/: __init__.py  cli.py  daemon.py  x730.py
tests/test_x730/: __init__.py  test_x730.py
tests/x730/: __init__.py  test_x730.py
